alpm-types/src/relation/snapshots/soname::invalid_sonamev1_parser@case_6.snap
---
source: alpm-types/src/relation/soname.rs
---
error: invalid shared object name
 | 
 | invalidsoname.so~1.64
 | ^
 | 
 = note: Parser failed with the following error:
error: invalid shared object name
 | 
 | invalidsoname.so~1.64
 |                 ^ expected end of input.
